add_executable(elimination elimination.cpp)

add_executable(intervals intervals.cpp)

add_executable(buying_log buying_log.cpp)

add_executable(delivery delivery.cpp)

add_executable(brainfk brainfk.cpp)

add_executable(disjoint_intervals disjoint_intervals.cpp)

add_executable(buying buying.cpp)

add_executable(super_closure super_closure.cpp)

add_executable(cpp02main main.cpp)

add_executable(wooden wooden.cpp)