add_executable(int_stream int_stream.cpp)

add_executable(shared_mem shared_mem.cpp)

add_executable(editorMain EditorMain.cpp TextEditor.cpp)

add_executable(sort sort.cpp)

add_executable(comment_system comment_system.cpp)

add_executable(cards cards.cpp)

add_executable(ConcMain  Semaphore.cpp ConcMain.cpp lock.cpp)
